Integrate Monitoring into Invoker Part 1

--- a/invoker/invoker-core/pom.xml
+++ b/invoker/invoker-core/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>at.sti2.ngsee.invoker</groupId>
 	<artifactId>invoker-core</artifactId>
-	<version>1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<parent>
@@ -21,8 +20,13 @@
 	</properties>
 
 	<dependencies>
-		
+
 		<!-- projects -->
+		<dependency>
+			<groupId>at.sti2.ngsee.monitoring</groupId>
+			<artifactId>monitoring-core</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>invoker-api</artifactId>
@@ -35,11 +39,13 @@
 			<groupId>at.sti2.ngsee.util</groupId>
 			<artifactId>util-triplestore-client</artifactId>
 		</dependency>
-		
+
+
 		<!-- axis -->
-		<!--dependency>
+		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-kernel</artifactId>
+			<version>1.6.2</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.geronimo.specs</groupId>
@@ -54,16 +60,19 @@
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-transport-local</artifactId>
+			<version>1.6.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-transport-http</artifactId>
-                </dependency-->
+			<version>1.6.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 		</dependency>
-		
+
 		<!-- cxf -->
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
