--- a/monitoring/monitoring-core/src/main/resources/log4j.properties
+++ b/monitoring/monitoring-core/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootLogger=ERROR
-log4j.logger.at.sti2.wsmf.core=ERROR, S
+log4j.logger.at.sti2.wsmf.core=DEBUG, S
 
 log4j.appender.S=org.apache.log4j.ConsoleAppender
 log4j.appender.S.layout=org.apache.log4j.PatternLayout
