--- a/invoker/invoker-webservice/src/main/webapp/WEB-INF/web.xml
+++ b/invoker/invoker-webservice/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
                 <param-name>contextConfigLocation</param-name>
                 <param-value>
                         classpath:META-INF/cxf/cxf.xml
-                        classpath:META-INF/cxf/cxf-extension-soap.xml
+                        <!-- classpath:META-INF/cxf/cxf-extension-soap.xml -->
                         classpath:META-INF/cxf/cxf-servlet.xml 
                 </param-value>
         </context-param>
