--- a/monitoring/monitoring-webservice/pom.xml
+++ b/monitoring/monitoring-webservice/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>at.sti2.ngsee.monitoring</groupId>
 	<artifactId>monitoring-webservice</artifactId>
-	<version>1.2-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>Web Service Monitoring Framework - Web Services</name>
 
@@ -19,47 +18,47 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-        <build>
-                <finalName>${project.artifactId}</finalName>
+	<build>
+		<finalName>${project.artifactId}</finalName>
 
-                <plugins>
-                        <plugin>
-                                <groupId>org.apache.cxf</groupId>
-                                <artifactId>cxf-java2ws-plugin</artifactId>
-                        </plugin>
-                        <plugin>
-                                <groupId>org.mortbay.jetty</groupId>
-                                <artifactId>maven-jetty-plugin</artifactId>
-                                <configuration>
-                                        <connectors>
-                                                <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                                                        <port>9990</port>
-                                                        <maxIdleTime>60000</maxIdleTime>
-                                                </connector>
-                                        </connectors>
-                                </configuration>
-                        </plugin>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-java2ws-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<configuration>
+					<connectors>
+						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+							<port>9990</port>
+							<maxIdleTime>60000</maxIdleTime>
+						</connector>
+					</connectors>
+				</configuration>
+			</plugin>
 
-                </plugins>
-        </build>
+		</plugins>
+	</build>
 
-        <dependencies>
-                <dependency>
-                        <groupId>${project.parent.groupId}</groupId>
-                        <artifactId>monitoring-api</artifactId>
-                </dependency>
-                <dependency>
-                        <groupId>${project.parent.groupId}</groupId>
-                        <artifactId>monitoring-core</artifactId>
-                </dependency>
-                <dependency>
-                        <groupId>org.apache.cxf</groupId>
-                        <artifactId>cxf-rt-frontend-jaxws</artifactId>
-                </dependency>
-                <dependency>
-                        <groupId>org.apache.cxf</groupId>
-                        <artifactId>cxf-rt-transports-http</artifactId>
-                </dependency>
-        </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>${project.parent.groupId}</groupId>
+			<artifactId>monitoring-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${project.parent.groupId}</groupId>
+			<artifactId>monitoring-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http</artifactId>
+		</dependency>
+	</dependencies>
 
 </project>
