--- a/registration/registration-core/pom.xml
+++ b/registration/registration-core/pom.xml
@@ -83,6 +83,21 @@
                         <groupId>at.sti2.ngsee.util</groupId>
                         <artifactId>util-triplestore-client</artifactId>
                 </dependency>
+                <dependency>
+                	<groupId>org.openrdf</groupId>
+                	<artifactId>openrdf-sail-inferencer</artifactId>
+                	<version>2.0.1</version>
+                </dependency>
+                <dependency>
+                	<groupId>org.openrdf</groupId>
+                	<artifactId>openrdf-sail-api</artifactId>
+                	<version>2.0.1</version>
+                </dependency>
+                <dependency>
+                	<groupId>org.openrdf</groupId>
+                	<artifactId>openrdf-sail-memory</artifactId>
+                	<version>2.0.1</version>
+                </dependency>
         </dependencies>
 </project>
 
