--- a/monitoring/monitoring-core/src/main/resources/default.properties
+++ b/monitoring/monitoring-core/src/main/resources/default.properties
@@ -12,8 +12,8 @@
 
 #instance.prefixuri = http://sti2.at/wsmf/instances#
 
-endpoint.master.url = http://sesa.sti2.at:8080/invoker-dummy-webservice/services/valenciatPortWebService
-endpoint.master.soapaction = 
+#endpoint.master.url = http://sesa.sti2.at:8080/invoker-dummy-webservice/services/valenciatPortWebService
+#endpoint.master.soapaction = 
 
 #endpoint.servicename = ValenciaPortWebService
 #endpoint.namespace = http://webservice.monitoring.ngsee.sti2.at/
@@ -22,7 +22,7 @@ endpoint.master.soapaction =
 #endpoint.master.soapaction = 
 
 #endpoint.servicename = DummyWebService
-endpoint.namespace = http://sesa.sti2.at/services/
+#endpoint.namespace = http://sesa.sti2.at/services/
 
 triplestore.endpoint = http://localhost:8080/openrdf-sesame/
 triplestore.reposid = wsmf
