--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<module>monitoring</module>
 		<module>util</module>
 		<module>grounding</module>
-	    <!--  <module>ranking</module> -->
+	    <module>soa4all.ranking.nfps.wsmo.lite</module>
 	</modules>
 
 	<name>sesa-project</name>
