Extendet Monitoring / Ranking Web Services based on QoS

--- a/monitoring/monitoring-core/src/main/resources/default.properties
+++ b/monitoring/monitoring-core/src/main/resources/default.properties
@@ -4,7 +4,7 @@
 #endpoint.master.url = http://sesa.sti2.at:8080/registration-webservice/services/register
 #endpoint.master.soapaction = 
 
-#endpoint.servicename = RegistrationWebServiceService
+endpoint.servicename = ReverseStringWebService
 #endpoint.namespace = http://sesa.sti2.at/services/
 
 #triplestore.endpoint = http://localhost:8080/openrdf-sesame/
@@ -16,7 +16,7 @@
 #endpoint.master.soapaction = 
 
 #endpoint.servicename = ValenciaPortWebService
-#endpoint.namespace = http://webservice.monitoring.ngsee.sti2.at/
+endpoint.namespace = http://webservice.monitoring.ngsee.sti2.at/
 
 #endpoint.master.url = http://localhost:9292/at.sti2.ngsee.testwebservices/services/dummy
 #endpoint.master.soapaction = 
