Added json service for the monitoring + html with google charts example

--- a/monitoring/pom.xml
+++ b/monitoring/pom.xml
@@ -20,6 +20,7 @@
 		<module>monitoring-webservice</module>
 		<module>monitoring-channellistener-example</module>
 		<!-- <module>monitoring-webservices-examples</module> !-->
+		<module>monitoring-jsonservice</module>
 	</modules>
 
 	<properties>
