--- a/monitoring/monitoring-core/src/main/resources/default.properties
+++ b/monitoring/monitoring-core/src/main/resources/default.properties
@@ -24,7 +24,7 @@ endpoint.namespace = http://webservice.monitoring.ngsee.sti2.at/
 #endpoint.servicename = DummyWebService
 #endpoint.namespace = http://sesa.sti2.at/services/
 
-triplestore.endpoint = http://localhost:8080/openrdf-sesame/
+triplestore.endpoint = http://localhost/openrdf-sesame/
 triplestore.reposid = wsmf
 
 instance.prefixuri = http://sti2.at/wsmf/instances#
