--- a/soa4all.ranking.nfps.wsmo.lite/pom.xml
+++ b/soa4all.ranking.nfps.wsmo.lite/pom.xml
@@ -62,12 +62,15 @@
 			<id>sti2-archiva-snapshots</id>
 			<url>http://maven.sti2.at/archiva/repository/snapshots</url>
 		</repository>
+		<!--  offline -->
+		<!-- 
 		<repository>
 			<id>soa4all-repo</id>
 			<name>SOA4all</name>
 			<url>http://87.213.46.9:8080/nexus-webapp-1.3.1/content/repositories/public/</url>
 		</repository>
-
+ -->
+ 
 		<repository>
 			<id>aduna-repo</id>
 			<name>Aduna</name>
