Refactoring; Bug fixing; Testcases; Preparing stable version

--- a/util/util-triplestore-client/src/main/resources/default.properties
+++ b/util/util-triplestore-client/src/main/resources/default.properties
@@ -1,7 +1,9 @@
 #######################################
 ## RDF/OWL Repository
 #######################################
-repos.sesame.endpoint = http://localhost:8080/openrdf-sesame
+#repos.sesame.endpoint = http://localhost:8080/openrdf-sesame
+repos.sesame.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
+      
 repos.sesame.id = sigimeraRepos
 repos.baseuri = http://sigimera.networld.to/instances/testdata.rdf#
 
