--- a/monitoring/monitoring-core/src/main/resources/default.properties
+++ b/monitoring/monitoring-core/src/main/resources/default.properties
@@ -1,30 +1,13 @@
 ############################
 # Invocation Information
 ###########################
-#endpoint.master.url = http://sesa.sti2.at:8080/registration-webservice/services/register
-#endpoint.master.soapaction = 
+
 
 endpoint.servicename = ReverseStringWebService
-#endpoint.namespace = http://sesa.sti2.at/services/
 
-#triplestore.endpoint = http://localhost:8080/openrdf-sesame/
-#triplestore.reposid = wsmf
-
-#instance.prefixuri = http://sti2.at/wsmf/instances#
-
-#endpoint.master.url = http://sesa.sti2.at:8080/invoker-dummy-webservice/services/valenciatPortWebService
-#endpoint.master.soapaction = 
-
-#endpoint.servicename = ValenciaPortWebService
 endpoint.namespace = http://webservice.monitoring.ngsee.sti2.at/
 
-#endpoint.master.url = http://localhost:9292/at.sti2.ngsee.testwebservices/services/dummy
-#endpoint.master.soapaction = 
-
-#endpoint.servicename = DummyWebService
-#endpoint.namespace = http://sesa.sti2.at/services/
-
-triplestore.endpoint = http://localhost/openrdf-sesame/
+triplestore.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
 triplestore.reposid = wsmf
 
 instance.prefixuri = http://sti2.at/wsmf/instances#
