--- a/registration/registration-core/pom.xml
+++ b/registration/registration-core/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>registration-core</artifactId>
@@ -11,91 +12,97 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-        <repositories>
-                <repository>
-                        <id>sti-snapshots</id>
-                        <name>STI snapshots</name>
-                        <url>http://maven.sti2.at/archiva/repository/snapshots</url>
-                </repository>
-                <repository>
-                        <id>sti-external</id>
-                        <name>Maven STI external repository</name>
-                        <url>http://maven.sti2.at/archiva/repository/external</url>
-                </repository>
-        </repositories>
 
-        <name>registration-core</name>
-        <url>http://maven.apache.org</url>
+	<name>registration-core</name>
+	<url>http://maven.apache.org</url>
 
-        <properties>
-                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-        <dependencies>
-                <dependency>
-                        <groupId>at.sti2.ngsee.registration</groupId>
-                        <artifactId>registration-api</artifactId>
-                        <scope>compile</scope>
-                </dependency>
-                <dependency>
-                        <groupId>org.ow2.easywsdl</groupId>
-                        <artifactId>easywsdl-wsdl</artifactId>
-                        <version>2.3</version>
-                </dependency>
-                <dependency>
-                        <groupId>org.ow2.easywsdl</groupId>
-                        <artifactId>easywsdl-ext-sawsdl</artifactId>
-                        <version>2.3</version>
-                </dependency>
-                <dependency>
-                        <groupId>wsdl4j</groupId>
-                        <artifactId>wsdl4j</artifactId>
-                        <version>1.6.2</version>
-                </dependency>
-                <dependency>
-                        <groupId>org.ow2.easywsdl</groupId>
-                        <artifactId>easywsdl-ext-wsdl4complexwsdl</artifactId>
-                        <version>2.3</version>
-                </dependency>
-                <dependency>
-                        <groupId>edu.uga.cs.lsdis</groupId>
-                        <artifactId>SAWSDL4J</artifactId>
-                        <version>M4</version>
-                </dependency>
-                <dependency>
-                        <groupId>jaxen</groupId>
-                        <artifactId>jaxen</artifactId>
-                        <version>1.1</version>
-                </dependency>
-                <dependency>
-                        <groupId>net.sf.saxon</groupId>
-                        <artifactId>saxon</artifactId>
-                        <version>8.7</version>
-                </dependency>
-                <dependency>
-                        <groupId>net.sf.saxon</groupId>
-                        <artifactId>saxon-dom</artifactId>
-                        <version>8.7</version>
-                </dependency>
-                <dependency>
-                        <groupId>at.sti2.ngsee.util</groupId>
-                        <artifactId>util-triplestore-client</artifactId>
-                </dependency>
-                <dependency>
-                        <groupId>org.openrdf</groupId>
-                        <artifactId>openrdf-sail-inferencer</artifactId>
-                        <version>2.0.1</version>
-                </dependency>
-                <dependency>
-                        <groupId>org.openrdf</groupId>
-                        <artifactId>openrdf-sail-api</artifactId>
-                        <version>2.0.1</version>
-                </dependency>
-                <dependency>
-                        <groupId>org.openrdf</groupId>
-                        <artifactId>openrdf-sail-memory</artifactId>
-                        <version>2.0.1</version>
-                </dependency>
-        </dependencies>
+	<dependencies>   
+		<dependency>
+			<groupId>at.sti2.ngsee.registration</groupId>
+			<artifactId>registration-api</artifactId>
+			<scope>compile</scope>
+		</dependency> 
+				<dependency>
+			<groupId>at.sti2.ngsee.util</groupId>
+			<artifactId>util-triplestore-client</artifactId>
+		</dependency>
+		
+
+
+
+		
+		
+
+
+	<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>saxon</artifactId>
+			<version>8.7</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>saxon-dom</artifactId>
+			<version>8.7</version>
+					</dependency>	
+	
+
+		
+
+		<dependency>
+			<groupId>wsdl4j</groupId>
+			<artifactId>wsdl4j</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+			<version>1.1</version>
+		</dependency>
+
+						<dependency>
+			<groupId>edu.uga.cs.lsdis</groupId>
+			<artifactId>SAWSDL4J</artifactId>
+			<version>M4</version>
+		</dependency>
+				
+	
+					<dependency>
+			<groupId>org.ow2.easywsdl</groupId>
+			<artifactId>easywsdl-wsdl</artifactId>
+			<version>2.1</version>
+		</dependency> 
+		<dependency>
+			<groupId>org.ow2.easywsdl</groupId>
+			<artifactId>easywsdl-ext-sawsdl</artifactId>
+			<version>2.1</version>
+		</dependency>
+<dependency>
+			<groupId>org.ow2.easywsdl</groupId>
+			<artifactId>easywsdl-ext-wsdl4complexwsdl</artifactId>
+			<version>2.1</version>
+		</dependency>
+<!-- 
+		<dependency>
+			<groupId>org.openrdf</groupId>
+			<artifactId>openrdf-sail-inferencer</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openrdf</groupId>
+			<artifactId>openrdf-sail-api</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openrdf</groupId>
+			<artifactId>openrdf-sail-memory</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+ -->
+	</dependencies>
 </project>
 
