--- a/invoker/invoker-core/src/main/resources/default.properties
+++ b/invoker/invoker-core/src/main/resources/default.properties
@@ -3,3 +3,18 @@
 ######################################
 sesame.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
 sesame.reposid = sesaRepo
+
+
+
+##
+## TODO: move this seperately
+##
+
+endpoint.servicename = ReverseStringWebService
+
+endpoint.namespace = http://webservice.monitoring.ngsee.sti2.at/
+
+triplestore.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
+triplestore.reposid = wsmf
+
+instance.prefixuri = http://sti2.at/wsmf/instances#
