--- a/monitoring/pom.xml
+++ b/monitoring/pom.xml
@@ -21,6 +21,7 @@
 		<module>monitoring-channellistener-example</module>
 		<!-- <module>monitoring-webservices-examples</module> !-->
 		<module>monitoring-jsonservice</module>
+		<module>monitoring-testwebservices</module>
 	</modules>
 
 	<properties>
