--- a/discovery/discovery-core/src/main/resources/default.properties
+++ b/discovery/discovery-core/src/main/resources/default.properties
@@ -2,4 +2,4 @@
 # Triplestore Access Information
 ######################################
 sesame.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
-sesame.reposid = sesaRepo
+sesame.reposid = msee
