--- a/registration/registration-core/src/main/resources/default.properties
+++ b/registration/registration-core/src/main/resources/default.properties
@@ -3,4 +3,4 @@
 ######################################
 sesame.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
 #sesame.endpoint = http://localhost/openrdf-sesame
-sesame.reposid = sesaRepo
+sesame.reposid = msee
