Deleted FormatHandler (unneeded). Deleted unneeded methods RepositoryHandler + started testcase. minor clean ups

--- a/util/util-triplestore-client/pom.xml
+++ b/util/util-triplestore-client/pom.xml
@@ -45,6 +45,11 @@
 			<version>1.1.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>stringtemplate</artifactId>
+			<version>3.2</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.5</version>
