--- a/monitoring/monitoring-core/src/main/resources/default.properties
+++ b/monitoring/monitoring-core/src/main/resources/default.properties
@@ -11,3 +11,5 @@ triplestore.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
 triplestore.reposid = wsmf
 
 instance.prefixuri = http://sti2.at/wsmf/instances#
+
+maventest = $abc
