--- a/discovery/discovery-core/src/main/resources/default.properties
+++ b/discovery/discovery-core/src/main/resources/default.properties
@@ -1,5 +1,5 @@
 ######################################
 # Triplestore Access Information
 ######################################
-sesame.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
-sesame.reposid = msee
+discovery.sesame.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
+discovery.sesame.reposid = msee
